# inclusiv-ui

./: .gitignore  .vercelignore  LICENSE-CODE  LICENSE-DATA  README.md  pyproject.toml  vercel.json
.github/workflows/: annual-refresh.yml  ci.yml
data/: pilot_districts.json
data/manual/: district_web_research.json
data/processed/: _ai_summaries.json
data/processed/ca_dashboard/: 13-63073.json  13-63081.json  13-63099.json  13-63107.json  13-63115.json  13-63123.json  13-63131.json  13-63149.json  13-63164.json  13-63172.json  13-63180.json  13-63198.json  13-63206.json  13-63214.json  13-63222.json  13-63230.json  19-64212.json  19-64246.json  19-64261.json  19-64279.json  19-64287.json  19-64295.json  19-64303.json  19-64311.json  19-64329.json  19-64337.json  19-64345.json  19-64352.json  19-64378.json  19-64394.json  19-64436.json  19-64444.json  19-64451.json  19-64469.json  19-64477.json  19-64485.json  19-64501.json  19-64519.json  19-64527.json  (+201 more)
data/raw/: README.md
data/schema/: district.schema.json  school.schema.json
docs/: CONTRIBUTING.md  SECURITY.md  audit_checklist.md  data-sources.md  deployment.md  framework.md  framework_audit.md  framework_sources.md  methodology.md
pipeline/: __init__.py  utils.py
pipeline/admin/: build_district_list.py  build_sd_county_list.py
pipeline/enrichers/: programs.py  prompts.py  summarize.py
pipeline/transformers/: merge.py
pipeline/validators/: validate_data.py  validate_schema.py
tests/: test_merge.py  test_validate_data.py
web/frontend/: next.config.ts  package-lock.json  package.json
(+6319 files in other folders)
