[project]
name = "asd-schools-ca"
version = "0.1.0"
description = "Open-source data pipeline for California special-education / ASD school district information."
requires-python = ">=3.10"
license = { file = "LICENSE-CODE" }

dependencies = [
    "requests>=2.32",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pdfplumber>=0.11",
    "pydantic>=2.7",
    "jsonschema>=4.22",
    "tenacity>=8.4",
    "python-slugify>=8.0",
    "anthropic>=0.34",
    "rich>=13.7",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "psycopg[binary]>=3.2",
    "sqlalchemy>=2.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["pipeline", "tests"]
